fix: navbar now collapse when move to another page:

--- a/src/pages/home/style.css
+++ b/src/pages/home/style.css
@@ -1,3 +1,4 @@
 .title {
+  padding-bottom: 2rem;
   min-height: calc(100vh - 5.5rem);
 }
